Adds gulp scripts to package.json
Can now be ran with: `npm run build`

--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     },
     "main": "src/index.scss",
     "sass": "src/index.scss",
+    "scripts": {
+        "build": "gulp build",
+        "watch": "gulp watch",
+        "docs": "gulp docs"
+    },
     "keywords": [
         "css",
         "framework",
