--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
     "name": "ridestyler.ui",
     "version": "0.0.0",
+    "author": {
+        "name": "Byron Carasco",
+        "email": "byron@burkson.com",
+        "url": "http://github.com/bcarasco"
+    },
     "contributors": [
         {
             "name": "Byron Carasco",
@@ -9,10 +14,7 @@
         }
     ],
     "description": "ridestyler.ui - RideStyler's branded CSS framework",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Burkson/ridestyler.ui"
-    },
+    "repository": "https://github.com/Burkson/ridestyler.ui",
     "main": "src/index.scss",
     "sass": "src/index.scss",
     "scripts": {
@@ -50,7 +52,8 @@
         "gulp-sourcemaps": "^2.6.5",
         "handlebars": "^4.4.3",
         "jstransformer-highlight": "latest",
-        "jstransformer-markdown-it": "latest"
+        "jstransformer-markdown-it": "latest",
+        "sass-export": "^1.0.6"
     },
     "browserslist": [
         "last 4 Chrome versions",
