--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "devDependencies": {
         "async": "^3.1.0",
         "browser-sync": "^2.26.7",
+        "glob": "^7.1.4",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "latest",
         "gulp-clean-css": "latest",
